deploy/kustomize/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sps-crm
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: sps-crm/api:latest # replaced in overlay
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sps-crm
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: http
